--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -330,7 +330,6 @@
     "gotit": "Verstanden",
     "ignore": "Ignorieren",
     "updatesExplanation": "Ab und zu werden manche Materialien aktualisiert: Wir veröffentlichen eine neue Version eines Arbeitsblattes oder fügen eine neue Übersetzung hinzu.\nUnser Ziel ist, dass du dir darüber keine Gedanken machen brauchst, sondern immer die aktuellsten Versionen einsatzbereit dabei hast. Deshalb kann die App im Hintergrund nach Aktualisierungen suchen und sie automatisch herunterladen, wenn du das möchtest.",
-    "letsGo": "Los geht's!"
-
-
+    "letsGo": "Los geht's!",
+    "homeExplanation": "Die Arbeitsblätter sind in vier Kategorien organisiert:"
 }
