--- a/lib/l10n/locales/app_en.arb
+++ b/lib/l10n/locales/app_en.arb
@@ -330,5 +330,6 @@
     "gotit": "Got it",
     "ignore": "Ignore",
    "updatesExplanation": "From time to time the resources get updated: We release a new version of a worksheet or add a new translation.\nWe want you to not worry about that but be always ready to use the latest versions. Therefore the app can check for updates in the background and download them automatically if you want.",
-    "letsGo": "Let's go!"
+    "letsGo": "Let's go!",
+    "homeExplanation": "The worksheets are grouped into four categories:"
 }
