--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -292,17 +292,17 @@
         }
     },
     "about": "Über...",
-    "appDescription": "This is the app of the https://www.4training.net website. Our goal is to provide you with great resources in many languages.",
-    "matthew10_8": "Matthew 10:8, “Freely you have received; freely give.”",
-    "noCopyright": "All contents are without any copyright. Use them and share them!",
-    "trustworthy": "Trustworthy",
-    "trustworthyText": "This app does no tracking, shows no adverts and doesn't send any information anywhere. As you may have noticed it doesn't need any permissions.",
-    "worksOffline": "Works offline",
-    "worksOfflineText": "After you downloaded the languages you're interested in, the app doesn't need an internet connection. You'll only need internet if you want to check for updates or download another language.",
-    "contributing": "Contributing",
-    "contributingText": "Many people contributed their time, skills and resources to make this vision happen. Thank you! There is many areas and ways you can contribute: Translating, programming, design, correcting errors, ... Please write us at contact@4training.net - we're happy to hear your ideas and feedback!",
+    "appDescription": "Dies ist die App von https://www.4training.net. Unser Ziel ist es, dich mit hervorragenden Materialien in vielen Sprachen zu versorgen.",
+    "matthew10_8": "Matthäus 10,8: „Umsonst habt ihr es empfangen, umsonst gebt es weiter!”",
+    "noCopyright": "Alle Inhalte sind copyright-frei und dürfen ohne Einschränkungen weitergegeben und weiterverarbeitet werden (CC0).",
+    "secure": "Sicher",
+    "secureText": "Diese App verwendet kein Tracking, zeigt keine Werbung und sendet keinerlei Daten irgendwohin. Wie du vielleicht bemerkt hast, benötigt sie keine Berechtigungen. Sicherer geht nicht 😀\nDie Materialien werden SSL-verschlüsselt von github.com heruntergeladen.",
+    "worksOffline": "Funktioniert offline",
+    "worksOfflineText": "Wenn du die gewählten Sprachen heruntergeladen hast, braucht die App keine Internet-Verbindung. Diese ist nur nötig, wenn du nach Updates suchst oder eine andere Sprache herunterladen möchtest.",
+    "contributing": "Mitmachen",
+    "contributingText": "Viele Menschen haben ihre Zeit, Fähigkeiten und Finanzen eingesetzt, um diese Vision Realität werden zu lassen. Vielen Dank! Es gibt viele Bereich, wo du dich einbringen kannst: Übersetzen, programmieren, spenden, Design, Fehlersuche, ...\nDu erreichst uns mit einer Mail an contact@4training.net – wir freuen uns über deine Ideen und dein Feedback!",
     "openSource": "Open Source",
-    "openSourceText": "This app is open source. You have the freedom to use it, study it, share it and improve it. Sourcecode and more information: https://github.com/4training/app4training",
+    "openSourceText": "Diese App ist Open Source. Du hast die Freiheit, sie zu nutzen, zu analysieren, weiterzugeben und zu verbessern. Quellcode, geplante nächste Features und mehr Infos\nhttps://github.com/4training/app4training",
     "version": "Version",
     "welcome": "Herzlich Willkommen!",
     "selectAppLanguage": "Bitte wähle die App-Sprache aus. Das Menü und alle Einstellungen werden in dieser Sprache sein.",
@@ -331,5 +331,5 @@
     "ignore": "Ignorieren",
     "updatesExplanation": "Ab und zu werden manche Materialien aktualisiert: Wir veröffentlichen eine neue Version eines Arbeitsblattes oder fügen eine neue Übersetzung hinzu.\nUnser Ziel ist, dass du dir darüber keine Gedanken machen brauchst, sondern immer die aktuellsten Versionen einsatzbereit dabei hast. Deshalb kann die App im Hintergrund nach Aktualisierungen suchen und sie automatisch herunterladen, wenn du das möchtest.",
     "letsGo": "Los geht's!",
-    "homeExplanation": "Die Arbeitsblätter sind in vier Kategorien organisiert:"
+    "homeExplanation": "Gott baut sein Reich überall auf der Welt. Er möchte, dass wir dabei mitmachen und andere zu Jüngern machen!\nDiese App will dir diese Aufgabe erleichtern: Wir stellen dir gute Trainingsmaterialien zur Verfügung. Und das Beste ist: Du kannst dasselbe Arbeitsblatt in verschiedenen Sprachen anschauen, so dass du immer weißt, was es bedeutet, selbst wenn du eine Sprache nicht verstehst.\n\nAlle Inhalte sind nun offline verfügbar und jederzeit bereit auf deinem Handy:"
 }
