Checking for updates: Handle Github API rate limit
When checking for updates, we do one github API request per language. As
unauthenticated API requests are limited to 60/hour a user can exceed
this limit by clicking several times the "Check now" button. Handle this
appropriately and give a helpful error message.
Add tests for the CheckNowButton

--- a/lib/l10n/locales/app_en.arb
+++ b/lib/l10n/locales/app_en.arb
@@ -157,6 +157,7 @@
             }
         }
     },
+    "checkingUpdatesLimit": "Error: You checked for updates too often. Please wait an hour.",
     "checkingUpdatesError": "Error while checking updates. Please try again later",
     "languageSelectionHeader": "Show current page in:",
     "@languageSelectionHeader": {
