--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -157,6 +157,7 @@
             }
         }
     },
+    "checkingUpdatesLimit": "Fehler: Du hast zu häufig nach Aktualisierungen gesucht. Bitte warte eine Stunde.",
     "checkingUpdatesError": "Fehler beim Überprüfen auf Updates. Bitte versuche es später noch einmal.",
     "languageSelectionHeader": "Seite anzeigen auf:",
     "@languageSelectionHeader": {
