Improve onboarding: Enforce app language download
In the second onboarding step: Enforce that user downloads the currently
selected app language - otherwise they can't continue (because anyway
the app wouldn't be of much use).
Make sure settings get saved in third onboarding step.
Simplify some internals in routing: No duplicate /downloadlanguages
route anymore.
In case a user deletes all languages, he gets redirected
to the second onboarding step. Now he sees the back button (no harm in
that) and after that he will be directly taken to /home if he went
through onboarding before.
Solves #219

--- a/lib/l10n/locales/app_en.arb
+++ b/lib/l10n/locales/app_en.arb
@@ -324,9 +324,9 @@
     "promoFeature3": "No copyright",
     "downloadLanguages": "Download languages",
     "downloadLanguagesExplanation": "Which languages do you want to use? Download them now and then they're available offline. One language uses less than 1 MB.",
-    "warnMissingAppLanguage" : "Please download English (en) before you proceed. Otherwise the table of content remains empty and you can't do much with the app.",
+    "warnMissingAppLanguage" : "Please download English (en) before you proceed. In order to do something with the app you need to download the app language.",
     "@warnMissingAppLanguage": {
-        "description": "Hint for translators: Replace English (en) with your language. Description: Warning message when user tries to continue from the downloading languages onboarding screen without having downloaded his app language"
+        "description": "Hint for translators: Replace English (en) with your language. Description: Warning message when user tries to continue without having downloaded his app language"
     },
     "gotit": "Got it",
     "ignore": "Ignore",
