--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -324,9 +324,9 @@
     "promoFeature3": "Kein Copyright",
     "downloadLanguages": "Sprachen herunterladen",
     "downloadLanguagesExplanation": "Welche Sprachen möchtest du nutzen? Lade sie jetzt herunter und dann sind sie offline verfügbar. Eine Sprache verbraucht weniger als 1 MB.",
-    "warnMissingAppLanguage" : "Bitte lade Deutsch (de) herunter, bevor du fortfährst. Sonst bleibt das Inhaltsverzeichnis leer und du kannst nicht viel mit der App machen.",
+    "warnMissingAppLanguage" : "Bitte lade Deutsch (de) herunter, bevor du fortfährst. Damit du die App sinnvoll nutzen kannst, muss die App-Sprache heruntergeladen sein.",
     "@warnMissingAppLanguage": {
-        "description": "Hint for translators: Replace English (en) with your language. Description: Warning message when user tries to continue from the downloading languages onboarding screen without having downloaded his app language"
+        "description": "Hint for translators: Replace English (en) with your language. Description: Warning message when user tries to continue without having downloaded his app language"
     },
     "gotit": "Verstanden",
     "ignore": "Ignorieren",
