Schedule the background task
Introduce a Provider to manage the scheduling of the background task
together with tests.
Also introduce a check interval of 15min (minimum for workmanager) so
that it's easier to test this functionality (remove this later).

--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -13,6 +13,7 @@
     "daily" : "täglich",
     "weekly" : "wöchentlich",
     "monthly" : "monatlich",
+    "testinterval" : "15min (Test)",
     "lastCheck" : "Letzte Überprüfung:",
     "checkNow" : "Jetzt prüfen",
     "doAutomaticUpdates" : "Automatische Aktualisierungen durchführen",
