Download PDF files; implement opening and sharing
When downloading a language, download the PDF files (available in the
newly created PDF repositories for each language).
Implement opening and sharing of these PDF files in our share menu.
This should be fully functional but tests are still missing

--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -338,5 +338,6 @@
     "sharePdf": "PDF teilen",
     "openPdf": "PDF öffnen",
     "openInBrowser": "Im Browser öffnen",
-    "shareLink": "Link teilen"
+    "shareLink": "Link teilen",
+    "pdfNotAvailable": "Für dieses Arbeitsblatt ist leider noch kein PDF verfügbar. Wenn du mithelfen möchtest, damit sich das bald ändert, dann melde dich bitte!"
 }
